@@ -106,62 +106,51 @@
   <!-- ================================================================== -->
 
   <target name="jar-demo" depends="compile-demo">
-    <jar
-      destfile="${build.dir}/${demo.name}.jar"
-      basedir="${build.dir}/classes/demo"
-      excludes="**/*.java">
-      <manifest>
-        <attribute name="Specification-Title" value="Lucene Search Engine: demos"/>
-        <!-- spec version must match "digit+{.digit+}*" -->
-        <attribute name="Specification-Version" value="${version}"/>
-        <attribute name="Specification-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="Implementation-Title" value="org.apache.lucene"/>
-        <!-- impl version can be any string -->
-        <attribute name="Implementation-Version"
-                   value="${version}"/>
-        <attribute name="Implementation-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="X-Compile-Source-JDK" 
-                   value="${javac.source}"/>
-        <attribute name="X-Compile-Target-JDK" 
-                   value="${javac.target}"/>
-	  </manifest>    	
-      <metainf dir="${common.dir}">
-        <include name="LICENSE.txt"/>
-        <include name="NOTICE.txt"/>
-      </metainf>
-    </jar>
+  	<sequential>
+  	  <build-manifest title="Lucene Search Engine: demos"/>
+      <jar
+        destfile="${build.dir}/${demo.name}.jar"
+        basedir="${build.dir}/classes/demo"
+        excludes="**/*.java"
+      	manifest="${manifest.file}">
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </jar>
+  	</sequential>
+  </target>
+
+  <target name="jar-demo-src" depends="compile-demo">
+  	<sequential>
+  	  <build-manifest title="Lucene Search Engine: demos"/>
+      <jar
+        destfile="${build.dir}/${demo.name}-src.jar"
+        basedir="src/demo"
+      	manifest="${manifest.file}">
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </jar>
+  	</sequential>
   </target>
 
   <target name="war-demo" depends="jar-core,jar-demo">
-    <war destfile="${build.dir}/${demo.war.name}.war"
-         webxml="src/jsp/WEB-INF/web.xml">
-      <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
-      <lib dir="${build.dir}" includes="${demo.name}.jar"/>
-      <lib dir="${build.dir}" includes="${final.name}.jar"/>
-      <manifest>
-        <attribute name="Specification-Title" value="Lucene Search Engine: demos"/>
-        <!-- spec version must match "digit+{.digit+}*" -->
-        <attribute name="Specification-Version" value="${version}"/>
-        <attribute name="Specification-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="Implementation-Title" value="org.apache.lucene"/>
-        <!-- impl version can be any string -->
-        <attribute name="Implementation-Version"
-                   value="${version}"/>
-        <attribute name="Implementation-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="X-Compile-Source-JDK" 
-                   value="${javac.source}"/>
-        <attribute name="X-Compile-Target-JDK" 
-                   value="${javac.target}"/>
-	  </manifest>    	
-      <metainf dir="${common.dir}">
-        <include name="LICENSE.txt"/>
-        <include name="NOTICE.txt"/>
-      </metainf>
-    </war>
+    <sequential>
+      <build-manifest title="Lucene Search Engine: demos"/>
+  	  <war destfile="${build.dir}/${demo.war.name}.war"
+           webxml="src/jsp/WEB-INF/web.xml"
+      	   manifest="${manifest.file}">
+        <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
+        <lib dir="${build.dir}" includes="${demo.name}.jar"/>
+        <lib dir="${build.dir}" includes="${final.name}.jar"/>
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </war>
+    </sequential>
   </target>
 
 
@@ -361,12 +350,24 @@
 
   <target name="dist-all" depends="dist, dist-src"/>
 
-  <target name="generate-maven-artifacts" depends="maven.ant.tasks-check, package">
+  <target name="generate-maven-artifacts" depends="maven.ant.tasks-check, package, jar-src, jar-demo-src">
     <sequential>
-      <m2-deploy pom.xml="lucene-parent-pom.xml"/>
-      <m2-deploy pom.xml="lucene-core-pom.xml"/>
-      <m2-deploy pom.xml="lucene-demos-pom.xml"/>
-      <m2-deploy pom.xml="lucene-contrib-pom.xml"/>
+      <m2-deploy pom.xml="lucene-parent-pom.xml.template"/>
+      <m2-deploy pom.xml="lucene-core-pom.xml.template">
+        <artifact-attachments>
+          <attach file="${build.dir}/${final.name}-src.jar"
+                  classifier="sources"/>
+        </artifact-attachments>
+      </m2-deploy>
+      
+      <m2-deploy pom.xml="lucene-demos-pom.xml.template">
+        <artifact-attachments>
+          <attach file="${build.dir}/${demo.name}-src.jar"
+                  classifier="sources"/>
+        </artifact-attachments>
+      </m2-deploy>
+      
+      <m2-deploy pom.xml="lucene-contrib-pom.xml.template"/>
       <contrib-crawl target="dist-maven"/>
       <!-- do md5 checksums -->
       <checksum forceOverwrite="yes" fileext=".md5">
