@@ -24,7 +24,7 @@
   <property name="build.dir" location="../../build/contrib/${ant.project.name}"/>
   <property name="dist.dir" location="../../dist/contrib/${ant.project.name}"/>
   <property name="maven.dist.dir" location="../../dist/maven"/>
-	
+  	
   <import file="../common-build.xml"/>
 
   <property name="lucene.jar" location="${common.dir}/build/lucene-core-${version}.jar"/>
@@ -75,11 +75,16 @@
     property="pom.xml.present">
   </available>
 			
-  <target name="dist-maven" if="pom.xml.present" depends="compile-core">
-    <artifact:pom file="${common.dir}/build/lucene-parent-pom.xml" id="maven.project"/>
-    <artifact:pom file="${common.dir}/build/lucene-core-pom.xml" id="maven.project"/>
-    <artifact:pom file="${common.dir}/build/lucene-contrib-pom.xml" id="maven.project"/>
-    <m2-deploy/>
+  <target name="dist-maven" if="pom.xml.present" depends="compile-core, jar-src">
+    <sequential>
+      <jarify basedir="${src.dir}" destfile="${build.dir}/${final.name}-sources.jar"/>
+      <m2-deploy>
+        <artifact-attachments>
+          <attach file="${build.dir}/${final.name}-src.jar"
+                  classifier="sources"/>
+        </artifact-attachments>
+      </m2-deploy>
+    </sequential>
   </target>
 
 </project>
