@@ -31,6 +31,8 @@
   <property name="demo.name" value="lucene-demos-${version}"/>
   <property name="demo.war.name" value="luceneweb"/>
 
+  <property name="manifest.file" location="${build.dir}/MANIFEST.MF"/>
+
   <!-- Build classpath -->
   <path id="classpath">
     <pathelement location="${common.dir}/${core.name}.jar"/>
@@ -63,63 +65,37 @@
 
   <target name="jar-demo" depends="compile-demo"
 	description="Build demo jar file">
-    <jar
-      destfile="${demo.name}.jar"
-      basedir="${build.dir}/classes/demo"
-      excludes="**/*.java">
-      <manifest>
-        <attribute name="Specification-Title" value="Lucene Search Engine: demos"/>
-        <!-- spec version must match "digit+{.digit+}*" -->
-        <attribute name="Specification-Version" value="${version}"/>
-        <attribute name="Specification-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="Implementation-Title" value="org.apache.lucene"/>
-        <!-- impl version can be any string -->
-        <attribute name="Implementation-Version"
-                   value="${version}"/>
-        <attribute name="Implementation-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="X-Compile-Source-JDK" 
-                   value="${javac.source}"/>
-        <attribute name="X-Compile-Target-JDK" 
-                   value="${javac.target}"/>
-	  </manifest>    	
-      <metainf dir="${common.dir}">
-        <include name="LICENSE.txt"/>
-        <include name="NOTICE.txt"/>
-      </metainf>
-    </jar>
+	<sequential>
+  	  <build-manifest/>
+	  <jar
+        destfile="${demo.name}.jar"
+        basedir="${build.dir}/classes/demo"
+        excludes="**/*.java"
+        manifest="${manifest.file}">
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </jar>
+    </sequential>
   </target>
 
   <target name="war-demo" depends="jar-demo"	
 	description="Build demo war file">
-    <war destfile="${demo.war.name}.war"
-         webxml="src/jsp/WEB-INF/web.xml">
-      <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
-      <lib dir="." includes="${demo.name}.jar"/>
-      <lib dir="." includes="${core.name}.jar"/>
-      <manifest>
-        <attribute name="Specification-Title" value="Lucene Search Engine: demos"/>
-        <!-- spec version must match "digit+{.digit+}*" -->
-        <attribute name="Specification-Version" value="${version}"/>
-        <attribute name="Specification-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="Implementation-Title" value="org.apache.lucene"/>
-        <!-- impl version can be any string -->
-        <attribute name="Implementation-Version"
-                   value="${version}"/>
-        <attribute name="Implementation-Vendor"
-                   value="The Apache Software Foundation"/>
-        <attribute name="X-Compile-Source-JDK" 
-                   value="${javac.source}"/>
-        <attribute name="X-Compile-Target-JDK" 
-                   value="${javac.target}"/>
-	  </manifest>    	
-      <metainf dir="${common.dir}">
-        <include name="LICENSE.txt"/>
-        <include name="NOTICE.txt"/>
-      </metainf>
-    </war>
+	<sequential>
+  	  <build-manifest/>
+      <war destfile="${demo.war.name}.war"
+           webxml="src/jsp/WEB-INF/web.xml"
+           manifest="${manifest.file}">
+        <fileset dir="src/jsp" excludes="WEB-INF/web.xml"/>
+        <lib dir="." includes="${demo.name}.jar"/>
+        <lib dir="." includes="${core.name}.jar"/>
+        <metainf dir="${common.dir}">
+          <include name="LICENSE.txt"/>
+          <include name="NOTICE.txt"/>
+        </metainf>
+      </war>
+    </sequential>
   </target>
 
   <!-- ================================================================== -->
@@ -210,6 +186,29 @@
   <!--+
       | M A C R O S
       +-->
+      
+  <macrodef name="build-manifest" description="Builds a manifest file">
+  	<sequential>
+      <manifest file="${manifest.file}">
+        <attribute name="Specification-Title" value="Lucene Search Engine: demos"/>
+		<!-- spec version must match "digit+{.digit+}*" -->
+		<attribute name="Specification-Version" value="${version}"/>
+		<attribute name="Specification-Vendor"
+		           value="The Apache Software Foundation"/>
+		<attribute name="Implementation-Title" value="org.apache.lucene"/>
+		<!-- impl version can be any string -->
+		<attribute name="Implementation-Version"
+		           value="${version}"/>
+		<attribute name="Implementation-Vendor"
+		           value="The Apache Software Foundation"/>
+		<attribute name="X-Compile-Source-JDK" 
+		           value="${javac.source}"/>
+		<attribute name="X-Compile-Target-JDK" 
+		           value="${javac.target}"/>
+	  </manifest>
+  	</sequential>
+  </macrodef>
+      
   <macrodef name="compile">
     <attribute name="srcdir"/>
     <attribute name="destdir"/>
